--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  sqflite: ^2.3.3+1
+  firebase_core: ^3.4.1
+  firebase_messaging: ^15.1.1
+  flutter_local_notifications: ^17.2.2
 
 dev_dependencies:
   flutter_test:
